Fix pre tag overflowing box

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -119,6 +119,7 @@ code {
 pre {
 	padding: 1.5em;
 	border-radius: 8px;
+	white-space: pre-wrap;
 }
 pre > code {
 	all: unset;
